--- a/states.html
+++ b/states.html
@@ -98,6 +98,7 @@
 			region_col_map["SWRO"] = "darksalmon";
 			region_col_map["MPRO"] = "palegreen";
 			region_col_map["WRO"] = "skyblue";
+			console.log(region_col_map);
 						
 			// remove existing svg
 			d3.select("div#bystate").select("svg").remove();
