--- a/states.html
+++ b/states.html
@@ -119,7 +119,7 @@
 			.x(function(d) {return xs(d.Year)})
 			.y(function(d) {return ys(d.MPersons)});
 				// draw line chart
-			var color = state_data.map(function (d) {return d.Region}).keys();
+			var color = region_col_map[state_data.map(function (d) {return d.Region}).keys()];
 			var line1 = svg1.append("path")
 			.datum(state_data)
 			.transition()
