--- a/states.html
+++ b/states.html
@@ -119,8 +119,8 @@
 			.x(function(d) {return xs(d.Year)})
 			.y(function(d) {return ys(d.MPersons)});
 				// draw line chart
-			console.log(state_data.map(function (d) {return d.Region}).keys())
-			var color = region_col_map[state_data.map(function (d) {return d.Region}).keys()];
+			console.log(state_data.map(function (d) {return d.Region}).keys()[0])
+			var color = region_col_map[state_data.map(function (d) {return d.Region}).keys()[0]];
 			console.log(color)
 			var line1 = svg1.append("path")
 			.datum(state_data)
