--- a/states.html
+++ b/states.html
@@ -119,7 +119,7 @@
 			.x(function(d) {return xs(d.Year)})
 			.y(function(d) {return ys(d.MPersons)});
 				// draw line chart
-			console.log(state_data.map(function (d) {return d.Region}).keys()[0])
+			console.log(state_data.map(function (d) {return d.Region}).keys())
 			var color = region_col_map[state_data.map(function (d) {return d.Region}).keys()[0]];
 			console.log(color)
 			var line1 = svg1.append("path")
@@ -127,7 +127,7 @@
 			.transition()
 			.duration(1000)
 			.attr("fill","none")
-			.attr("stroke", color)
+			.attr("stroke", region_col_map[function (d) {return d.Region}])
 			.attr("stroke-width", 3.0)
 			.attr("d", line);			
 			
