--- a/states.html
+++ b/states.html
@@ -124,7 +124,7 @@
 				// draw line chart
 			//console.log(state_data.map(function (d) {return d.Region}).keys())
 			//var color = region_col_map[state_data.map(function (d) {return d.Region}).keys()[0]];
-			//console.log(color)
+			console.log(state_data)
 			var line1 = svg1.append("path")
 			.datum(state_data)
 			.transition()
