--- a/states.html
+++ b/states.html
@@ -49,6 +49,7 @@
 				d.Region = d.Region;
 				d.BCost = d.BCost;
 				d.MCost = d.MCost;
+				d.RegionColor = d.RegionColor;
 			});	
 			// get list of states from data for dropdown
 			const stateData = data.filter(function(d) {return d && d.State != "US" 
@@ -81,14 +82,8 @@
 			}
 			function drawChart(data, state){
 
-			var state_data = data.filter(function(d) {return d.State == state});
-			const region_data = [data.filter(function(d) {return d.State == "NERO"}),
-								 data.filter(function(d) {return d.State == "MARO"}),
-								 data.filter(function(d) {return d.State == "SERO"}),
-								 data.filter(function(d) {return d.State == "MWRO"}),
-								 data.filter(function(d) {return d.State == "SWRO"}),
-								 data.filter(function(d) {return d.State == "MPRO"}),
-								 data.filter(function(d) {return d.State == "WRO"})]
+			var state_data = data.filter(function(d) {return d && d.State == state});
+			
 			console.log(state_data)
 			let region_col_map = {}
 			region_col_map["NERO"] = "pink";
@@ -130,7 +125,7 @@
 			.transition()
 			.duration(1000)
 			.attr("fill","none")
-			.attr("stroke", function (d) {return d.RegionColor;}) //scaleOrdinal doesn't work
+			.attr("stroke", function (d) {return cs(d.Region);}) //scaleOrdinal doesn't work
 			.attr("stroke-width", 3.0)
 			.attr("d", line);			
 			
