--- a/states.html
+++ b/states.html
@@ -102,7 +102,7 @@
 
 			var xs = d3.scaleBand().domain(state_data.map(function (d) {return d.Year})).range([0,700])
 			var ys = d3.scaleLinear().domain([0, (0.2 + d3.max(state_data, function(d) {return d.MPersons}))]).range([400,0])
-			var cs = d3.scaleOrdinal().domain(regions).range(["#FF88C4","#79D7FF","#FFDE6C","#C891FF","#FFA264","#B5EC7D","#6FCAE1"])
+			var cs = d3.scaleOrdinal().domain(["NERO","MARO","SERO","MWRO","SWRO","MPRO","WRO"]).range(["#FF88C4","#79D7FF","#FFDE6C","#C891FF","#FFA264","#B5EC7D","#6FCAE1"])
 			
 			//const color = ['pink','lightskyblue','yellow','mediumpurple','darksalmon','palegreen','skyblue'];
 			height = 400
@@ -125,7 +125,7 @@
 			.transition()
 			.duration(1000)
 			.attr("fill","none")
-			.attr("stroke", function (d) {return d.RegionColor;}) //scaleOrdinal doesn't work
+			.attr("stroke", function (d) {return cs(d.Region)}) //scaleOrdinal doesn't work
 			.attr("stroke-width", 3.0)
 			.attr("d", line);			
 			
