--- a/states.html
+++ b/states.html
@@ -143,11 +143,11 @@
 				//y label
 			svg1.append("text")
 			.attr("transform","rotate(-90)")
-			.attr("y", 0 - (margin.left))
+			.attr("y", 0 - (margin.left)-10)
 			.attr("x", 0 - (height / 2))
 			.attr("dy","1.5em")
 			.style("text-anchor","middle")
-			.style("font-size","14px")
+			.style("font-size","16px")
 			.style("font-family","sans-serif")
 			.text("Number of Persons (in Millinos)");
 				
@@ -156,7 +156,7 @@
 			.attr("transform","translate(" + width / 2 + "," + (height + margin.top) + ")")
 			.attr("dx","1.5em")
 			.style("text-anchor","middle")
-			.style("font-size","14px")
+			.style("font-size","16px")
 			.style("font-family","sans-serif")
 			.text("Year");			
 			}
