--- a/states.html
+++ b/states.html
@@ -143,7 +143,7 @@
 				//y label
 			svg1.append("text")
 			.attr("transform","rotate(-90)")
-			.attr("y", 0 - ((margin.left) -10 ))
+			.attr("y", 0 - ((margin.left) + 10 ))
 			.attr("x", 0 - (height / 2))
 			.attr("dy","1.5em")
 			.style("text-anchor","middle")
