--- a/states.html
+++ b/states.html
@@ -126,7 +126,8 @@
 			.transition()
 			.duration(1000)
 			.attr("fill","none")
-			.attr("stroke", region_col_map[function (d) {return region_col_map[d.Region]}]) //scaleOrdinal doesn't work
+			//.attr("stroke", [function (d) {return region_col_map[d.Region]}]) //scaleOrdinal doesn't work
+			.attr("stroke","steelblue")
 			.attr("stroke-width", 3.0)
 			.attr("d", line);			
 			
