--- a/states.html
+++ b/states.html
@@ -102,9 +102,9 @@
 
 			var xs = d3.scaleBand().domain(state_data.map(function (d) {return d.Year})).range([0,700])
 			var ys = d3.scaleLinear().domain([0, (0.2 + d3.max(state_data, function(d) {return d.MPersons}))]).range([400,0])
-			var cs = d3.scaleOrdinal().domain(["NERO","MARO","SERO","MWRO","SWRO","MPRO","WRO"]).range(["#FF88C4","#79D7FF","#FFDE6C","#C891FF","#FFA264","#B5EC7D","#6FCAE1"])
+			//var cs = d3.scaleOrdinal().domain(["NERO","MARO","SERO","MWRO","SWRO","MPRO","WRO"]).range(["#FF88C4","#79D7FF","#FFDE6C","#C891FF","#FFA264","#B5EC7D","#6FCAE1"])
 			var cd = d3.scaleIdentity().domain(["NERO","MARO","SERO","MWRO","SWRO","MPRO","WRO"]).range(["NERO","MARO","SERO","MWRO","SWRO","MPRO","WRO"]);
-
+			var cs = d3.scaleOrdinal(["NERO","MARO","SERO","MWRO","SWRO","MPRO","WRO"],["#FF88C4","#79D7FF","#FFDE6C","#C891FF","#FFA264","#B5EC7D","#6FCAE1"])
 			//const color = ['pink','lightskyblue','yellow','mediumpurple','darksalmon','palegreen','skyblue'];
 			height = 400
 			width = 700
@@ -126,8 +126,8 @@
 			.transition()
 			.duration(1000)
 			.attr("fill","none")
-			//.attr("stroke", [function (d) {return region_col_map[d.Region]}]) //scaleOrdinal doesn't work
-			.attr("stroke","steelblue")
+			.attr("stroke", function (d) {return cs(d.Region)}) //scaleOrdinal doesn't work
+			//.attr("stroke","steelblue")
 			.attr("stroke-width", 3.0)
 			.attr("d", line);			
 			
