--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     			<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/regions">Beneficiaries By Regions</a></li>
-			<li><a href="/states">Beneficiaries By State</a></li>
+				<li><a href="/states">Beneficiaries By State</a></li>
     			</ul>
 			</nav>   
 		</div>
@@ -26,11 +26,9 @@
 			    	is a federal program that provides food-purchasing assistance for low and no-income people. It is a federal aid program, administered by 
 			    	the United States Department of Agriculture under the Food and Nutrition Service (FNS), though benefits are distributed by specific departments 
 			    	of U.S. states.<br>
-			    	Source: <li><a href="https://en.wikipedia.org/wiki/Supplemental_Nutrition_Assistance_Program">Wikipedia/SNAP</a></li>
-			    		<li><a href="https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap">USDA-FNS</a></li>
 			    </p>
 		</div>		 
-			
+		<div id="USChart" align="center">	
 		<svg width=800 height=500></svg>		
 			<script>
 			async function init() {
@@ -102,7 +100,7 @@
 			.text("Year");			
 			}
 			</script>
-		
+			</div>
 		<footer>
     		<ul>
         		<p>
