--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 			svg1.selectAll().data(state_data)
 			.enter()
 			.append('rect')
+			.transition()
+			.duration(1000)
 			.attr('x',function(d,i) {return xs(parseInt(d.Year));})
 			.attr('y',function(d,i) {return ys(parseInt(d.MPersons));})
 			.attr('width', xs.bandwidth())
