--- a/index.html
+++ b/index.html
@@ -99,7 +99,13 @@
 			.style("text-anchor","middle")
 			.style("font-size","14px")
 			.style("font-family","sans-serif")
-			.text("Year");			
+			.text("Year");	
+
+				//annotations
+			svg1.append("text")
+			.attr('x', 140)
+			.attr('y', 140)
+			.text("test text test text test text test text")		
 			}
 			</script>
 			</div>
