--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			.enter()
 			.append('rect')
 			.transition()
-			.duration(5000)
+			.duration(3000)
 			.attr('x',function(d,i) {return xs(parseInt(d.Year));})
 			.attr('y',function(d,i) {return ys(parseInt(d.MPersons));})
 			.attr('width', xs.bandwidth())
@@ -103,9 +103,18 @@
 
 				//annotations
 			svg1.append("text")
-			.attr('x', 140)
-			.attr('y', 140)
-			.text("test text test text test text test text")		
+			.transition()
+			.duration(3000)
+			.attr('x', 120)
+			.attr('y', 100)
+			.text("The steep in number of people seeking assistance was")	;
+			svg1.append("text")
+			.transition()
+			.duration(3000)
+			.attr('x', 120)
+			.attr('y', 110)
+			.text("due to Great Recession and high unemployment rate");
+				
 			}
 			</script>
 			</div>
