--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			.attr("x2", 180)
 			.attr("y1", 140)
 			.attr("y2", 180)
-			.attr("stroke", steelblue)
+			.attr("stroke", "steelblue")
 			.attr("stroke-dasharray", "10");
 			}
 			</script>
