--- a/regions.html
+++ b/regions.html
@@ -84,6 +84,7 @@
 			.attr("fill","none")
 			.attr("stroke", function(d, i) {return cs(i)})
 			.attr("stroke-width", 2.0)
+			.attr("stroke-linecap","round")
 			.attr("d", line);
 			
 			
