--- a/states.html
+++ b/states.html
@@ -129,6 +129,7 @@
 			//.attr("stroke", function (d) {return cs(d.Region)}) //scaleOrdinal doesn't work
 			.attr("stroke","steelblue")
 			.attr("stroke-width", 3.0)
+			.attr("stroke-linecap","round")
 			.attr("d", line);			
 			
 				// y axis
