--- a/index.html
+++ b/index.html
@@ -118,11 +118,12 @@
 			svg1.append("line")
 			.transition()
 			.duration(3000)
-			.attr("x1", 140)
-			.attr("x2", 180)
-			.attr("y1", 140)
-			.attr("y2", 180)
+			.attr("x1", 270)
+			.attr("x2", 390)
+			.attr("y1", 170)
+			.attr("y2", 50)
 			.attr("stroke", "steelblue")
+			.attr("stroke-width", "2")
 			.attr("stroke-dasharray", "10");
 			}
 			</script>
