--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 				//annotations
 			svg1.append("text")
 			.transition()
-			.duration(3000)
-			.attr("x", 120)
+			.delay(3000)
+			.attr("x", 80)
 			.attr("y", 100)
 			.text("The steep in number of people seeking assistance was")	;
 			svg1.append("text")
 			.transition()
-			.duration(3000)
-			.attr("x", 120)
+			.delay(3000)
+			.attr("x", 80)
 			.attr("y", 120)
 			.text("due to Great Recession and high unemployment rate");
 				//append dotted line
