--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
 			.delay(3000)
 			.attr("x", 80)
 			.attr("y", 100)
-			.text("The steep in number of people seeking assistance was")	;
+			.text("The steep increase in number of people seeking assistance")	;
 			svg1.append("text")
 			.transition()
 			.delay(3000)
 			.attr("x", 80)
 			.attr("y", 120)
-			.text("due to Great Recession and high unemployment rate");
+			.text("was due to high unemployment rate during recession");
 				//append dotted line
 			svg1.append("line")
 			.transition()
