--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 			svg1.append("text")
 			.transition()
 			.delay(3000)
+			.duration(1000)
 			.attr("x", 80)
 			.attr("y", 100)
 			.text("The steep increase in number of people seeking assistance")	;
@@ -117,7 +118,8 @@
 				//append dotted line
 			svg1.append("line")
 			.transition()
-			.duration(3000)
+			.delay(3000)
+			.duration(1000)
 			.attr("x1", 270)
 			.attr("x2", 390)
 			.attr("y1", 170)
