--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 			svg1.append("text")
 			.transition()
 			.delay(3000)
+			.duration(1000)
 			.attr("x", 80)
 			.attr("y", 120)
 			.text("was due to high unemployment rate during recession");
@@ -123,7 +124,7 @@
 			.attr("x1", 270)
 			.attr("x2", 390)
 			.attr("y1", 170)
-			.attr("y2", 50)
+			.attr("y2", 33)
 			.attr("stroke", "steelblue")
 			.attr("stroke-width", "2")
 			.attr("stroke-dasharray", "10");
