--- a/regions.html
+++ b/regions.html
@@ -28,7 +28,7 @@
 		</div>
 	</head>
 	<body onload='init()';>
-		<div id="byregions" class="svgregions" align="center"></div>			
+		<div id="byregions" class="svgregions" align="center">			
 			<script>
 			async function init() {
 			//function init() {
@@ -118,7 +118,8 @@
 			.style("font-family","sans-serif")
 			.text("Year");			
 			}
-			</script>		
+			</script>	
+			</div>	
 		<footer>
     		<ul>
         		<p>
