--- a/regions.html
+++ b/regions.html
@@ -31,7 +31,7 @@
 		<div>
 			<table>
 				<td>
-					<img src="https://www.fns.usda.gov/sites/default/files/media/image/ro-map-2019.png"/>
+					<img src="/FNS Regions.png"/>
 				</td>
 				<td>
 					<div id="byregions" class="svgregions" align="center">		
