--- a/regions.html
+++ b/regions.html
@@ -31,7 +31,7 @@
 		<div>
 			<table>
 				<td>
-					<img src="/FNS Regions.png"/>
+					<img src="/FNS Regions.png"/ align="topleft">
 				</td>
 				<td>
 					<div id="byregions" class="svgregions" align="center">		
