--- a/regions.html
+++ b/regions.html
@@ -30,7 +30,7 @@
 	<body onload='init()';>
 		<div>
 			<table>
-				<td>
+				<td animation-delay="0.3s">
 					<img src="/FNS Regions.png" align="topleft">
 				</td>
 				<td>
