--- a/regions.html
+++ b/regions.html
@@ -30,7 +30,8 @@
 	<body onload='init()';>
 		<div>
 			<table>
-				<td animation-delay="0.3s">
+				<td>
+					<text>The below image is for FNS region representation only</text>
 					<img src="/FNS Regions.png" align="topleft">
 				</td>
 				<td>
