--- a/regions.html
+++ b/regions.html
@@ -135,13 +135,13 @@
 						.attr("y", 40)
 						.text("Southeast Regional Office")
 						.style("font-size","10px");
-							//append dotted line
+							//append  line
 						svg1.append("line")
 						.transition()
 						.delay(3000)
 						.duration(1000)
-						.attr("x1", 110)
-						.attr("x2", 170)
+						.attr("x1", 80)
+						.attr("x2", 100)
 						.attr("y1", 40)
 						.attr("y2", 40)
 						.attr("stroke", col[2])
@@ -160,8 +160,8 @@
 						.transition()
 						.delay(3000)
 						.duration(1000)
-						.attr("x1", 110)
-						.attr("x2", 170)
+						.attr("x1", 80)
+						.attr("x2", 100)
 						.attr("y1", 60)
 						.attr("y2", 60)
 						.attr("stroke", col[3])
@@ -180,8 +180,8 @@
 						.transition()
 						.delay(3000)
 						.duration(1000)
-						.attr("x1", 110)
-						.attr("x2", 170)
+						.attr("x1", 80)
+						.attr("x2", 100)
 						.attr("y1", 80)
 						.attr("y2", 80)
 						.attr("stroke", col[6])
@@ -200,8 +200,8 @@
 						.transition()
 						.delay(3000)
 						.duration(1000)
-						.attr("x1", 110)
-						.attr("x2", 170)
+						.attr("x1", 80)
+						.attr("x2", 100)
 						.attr("y1", 100)
 						.attr("y2", 100)
 						.attr("stroke", col[5])
@@ -220,8 +220,8 @@
 						.transition()
 						.delay(3000)
 						.duration(1000)
-						.attr("x1", 110)
-						.attr("x2", 170)
+						.attr("x1", 80)
+						.attr("x2", 100)
 						.attr("y1", 120)
 						.attr("y2", 120)
 						.attr("stroke", col[0])
@@ -240,8 +240,8 @@
 						.transition()
 						.delay(3000)
 						.duration(1000)
-						.attr("x1", 110)
-						.attr("x2", 170)
+						.attr("x1", 80)
+						.attr("x2", 100)
 						.attr("y1", 140)
 						.attr("y2", 140)
 						.attr("stroke", col[0])
@@ -260,8 +260,8 @@
 						.transition()
 						.delay(3000)
 						.duration(1000)
-						.attr("x1", 110)
-						.attr("x2", 170)
+						.attr("x1", 80)
+						.attr("x2", 100)
 						.attr("y1", 160)
 						.attr("y2", 160)
 						.attr("stroke", col[5])
