--- a/regions.html
+++ b/regions.html
@@ -142,8 +142,8 @@
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 40)
-						.attr("y2", 40)
+						.attr("y1", 45)
+						.attr("y2", 45)
 						.attr("stroke", col[2])
 						.attr("stroke-width", "3");
 							//MWRO
@@ -162,8 +162,8 @@
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 60)
-						.attr("y2", 60)
+						.attr("y1", 65)
+						.attr("y2", 65)
 						.attr("stroke", col[3])
 						.attr("stroke-width", "3");
 							//WRO
@@ -175,15 +175,15 @@
 						.attr("y", 80)
 						.text("Western Regional Office")
 						.style("font-size","10px");
-							//append dotted line
+							//append  line
 						svg1.append("line")
 						.transition()
 						.delay(3000)
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 80)
-						.attr("y2", 80)
+						.attr("y1", 85)
+						.attr("y2", 85)
 						.attr("stroke", col[6])
 						.attr("stroke-width", "3");
 							//SWRO
@@ -195,16 +195,16 @@
 						.attr("y", 100)
 						.text("Southwest Regional Office")
 						.style("font-size","10px");
-							//append dotted line
+							//append  line
 						svg1.append("line")
 						.transition()
 						.delay(3000)
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 100)
-						.attr("y2", 100)
-						.attr("stroke", col[5])
+						.attr("y1", 105)
+						.attr("y2", 105)
+						.attr("stroke", col[4])
 						.attr("stroke-width", "3");
 							//NERO
 						svg1.append("text")
@@ -215,15 +215,15 @@
 						.attr("y", 120)
 						.text("Northeast Regional Office")
 						.style("font-size","10px");
-							//append dotted line
+							//append line
 						svg1.append("line")
 						.transition()
 						.delay(3000)
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 120)
-						.attr("y2", 120)
+						.attr("y1", 125)
+						.attr("y2", 125)
 						.attr("stroke", col[0])
 						.attr("stroke-width", "3");
 							//MARO
@@ -235,16 +235,16 @@
 						.attr("y", 140)
 						.text("Mid-Atlantic Regional Office")
 						.style("font-size","10px");
-							//append dotted line
+							//append  line
 						svg1.append("line")
 						.transition()
 						.delay(3000)
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 140)
-						.attr("y2", 140)
-						.attr("stroke", col[0])
+						.attr("y1", 145)
+						.attr("y2", 145)
+						.attr("stroke", col[1])
 						.attr("stroke-width", "3");
 							//MPRO
 						svg1.append("text")
@@ -255,15 +255,15 @@
 						.attr("y", 160)
 						.text("Mountain Plains Regional Office")
 						.style("font-size","10px");
-							//append dotted line
+							//append  line
 						svg1.append("line")
 						.transition()
 						.delay(3000)
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 160)
-						.attr("y2", 160)
+						.attr("y1", 165)
+						.attr("y2", 165)
 						.attr("stroke", col[5])
 						.attr("stroke-width", "3");
 						
