--- a/regions.html
+++ b/regions.html
@@ -126,7 +126,7 @@
 						.style("font-family","sans-serif")
 						.text("Year");
 
-							//annotation
+							//annotation SERO
 						svg1.append("text")
 						.transition()
 						.delay(3000)
@@ -142,8 +142,8 @@
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 45)
-						.attr("y2", 45)
+						.attr("y1", 35)
+						.attr("y2", 35)
 						.attr("stroke", col[2])
 						.attr("stroke-width", "3");
 							//MWRO
@@ -162,8 +162,8 @@
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 65)
-						.attr("y2", 65)
+						.attr("y1", 55)
+						.attr("y2", 55)
 						.attr("stroke", col[3])
 						.attr("stroke-width", "3");
 							//WRO
@@ -182,8 +182,8 @@
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 85)
-						.attr("y2", 85)
+						.attr("y1", 75)
+						.attr("y2", 75)
 						.attr("stroke", col[6])
 						.attr("stroke-width", "3");
 							//SWRO
@@ -202,8 +202,8 @@
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 105)
-						.attr("y2", 105)
+						.attr("y1", 95)
+						.attr("y2", 95)
 						.attr("stroke", col[4])
 						.attr("stroke-width", "3");
 							//NERO
@@ -222,8 +222,8 @@
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 125)
-						.attr("y2", 125)
+						.attr("y1", 115)
+						.attr("y2", 115)
 						.attr("stroke", col[0])
 						.attr("stroke-width", "3");
 							//MARO
@@ -242,8 +242,8 @@
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 145)
-						.attr("y2", 145)
+						.attr("y1", 135)
+						.attr("y2", 135)
 						.attr("stroke", col[1])
 						.attr("stroke-width", "3");
 							//MPRO
@@ -262,8 +262,8 @@
 						.duration(1000)
 						.attr("x1", 80)
 						.attr("x2", 100)
-						.attr("y1", 165)
-						.attr("y2", 165)
+						.attr("y1", 155)
+						.attr("y2", 155)
 						.attr("stroke", col[5])
 						.attr("stroke-width", "3");
 						
