--- a/regions.html
+++ b/regions.html
@@ -32,7 +32,7 @@
 			<table>
 				<td>
 					<text>The below image is for FNS region representation only</text>
-					<img src="/FNS Regions.png" align="topleft">
+					<img src="/FNS Regions.png" align="left" animation-delay="2s">
 				</td>
 				<td>
 					<div id="byregions" class="svgregions" align="center">		
