--- a/states.html
+++ b/states.html
@@ -149,7 +149,7 @@
 				//y label
 			svg1.append("text")
 			.transition()
-			.duration(2000)
+			.delay(2000)
 			.attr("transform","rotate(-90)")
 			.attr("y", 0 - ((margin.left) + 10 ))
 			.attr("x", 0 - (height / 2))
@@ -162,7 +162,7 @@
 				//x label
 			svg1.append("text")
 			.transition()
-			.duration(2000)
+			.delay(2000)
 			.attr("transform","translate(" + width / 2 + "," + (height + margin.top) + ")")
 			.attr("dx","1.5em")
 			.style("text-anchor","middle")
