--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						.style("top", (d3.event.pageY)+"py")
 						.html("Total Amount Distributed is $"+d.BCost+ "Billion Dollars");
 			})
-			.on("mouseout", function() {tooltip.style("opacity", 0)})
+			.on("mouseout", function() {tooltip.style("opacity", 0)});
 						
 				// y axis
 			svg1.append("g")
